testsuite/tests/builtins/obj_methods/without_keys/both_pos_and_named/test.out
Error: Both positional and named value
   ╭─[ <working-dir>/script.lkql:2:7 ]
   │
 2 │ print(obj.without_keys(["a"], keys=["a"]))
   │       ─────────────────┬─────────────────  
   │                        ╰─────────────────── The parameter "keys" has been provided a positional and a named value
───╯
